// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-list-components.vue Demo-基本用法 1`] = `
<div>
  <div class="u-for-com" vusion-slot-name="default">
  </div>
</div>
`;

exports[`u-list-components.vue Demo-基本用法 2`] = `
<div>
  <div class="u-for-com" vusion-slot-name="default">
    <div class="u-for-com-frag">
      <div class="u-for-com-item" style="width: 20%;" vusion-slot-name="default">
        <div class="root" direction="horizontal" type vusion-disabled-copy vusion-disabled-cut vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            Button
          </a>
        </div>
      </div>
      <div class="u-for-com-item" style="width: 20%;" vusion-slot-name="default">
        <div class="root" direction="horizontal" type vusion-disabled-copy vusion-disabled-cut vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            Button
          </a>
        </div>
      </div>
      <div class="u-for-com-item" style="width: 20%;" vusion-slot-name="default">
        <div class="root" direction="horizontal" type vusion-disabled-copy vusion-disabled-cut vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            Button
          </a>
        </div>
      </div>
      <div class="u-for-com-item" style="width: 20%;" vusion-slot-name="default">
        <div class="root" direction="horizontal" type vusion-disabled-copy vusion-disabled-cut vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            Button
          </a>
        </div>
      </div>
      <div class="u-for-com-item" style="width: 20%;" vusion-slot-name="default">
        <div class="root" direction="horizontal" type vusion-disabled-copy vusion-disabled-cut vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            Button
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
